# ChangeLog for media-fonts/arphicfonts
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-fonts/arphicfonts/ChangeLog,v 1.45 2007/10/02 01:29:30 dirtyepic Exp $

  02 Oct 2007; Ryan Hill <dirtyepic@gentoo.org> arphicfonts-0.1-r2.ebuild,
  -arphicfonts-0.1.20060513.ebuild, arphicfonts-0.1.20060928.ebuild:
  Remove old.  Fix quoting.

  28 Jul 2007; Steve Dibb <beandog@gentoo.org>
  arphicfonts-0.1.20060928.ebuild:
  amd64 stable, bug 186399

  25 Jul 2007; Jeroen Roovers <jer@gentoo.org>
  arphicfonts-0.1.20060928.ebuild:
  Stable for HPPA (bug #186399).

  24 Jul 2007; Raúl Porcel <armin76@gentoo.org>
  arphicfonts-0.1.20060928.ebuild:
  alpha/ia64 stable wrt #186399

  24 Jul 2007; Christian Faulhammer <opfer@gentoo.org>
  arphicfonts-0.1.20060928.ebuild:
  stable x86, bug 186399

  24 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  arphicfonts-0.1.20060928.ebuild:
  Stable on sparc wrt #186399

  24 Jul 2007; Fabian Groffen <grobian@gentoo.org>
  arphicfonts-0.1-r2.ebuild, arphicfonts-0.1.20060513.ebuild,
  arphicfonts-0.1.20060928.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  24 Jul 2007; Joseph Jezak <josejx@gentoo.org>
  arphicfonts-0.1.20060928.ebuild:
  Marked ppc/ppc64 stable for bug #186399.

  18 Mar 2007; Simon Stelling <blubb@gentoo.org> ChangeLog:
  stable on amd64; bug 171063

  17 Mar 2007; Markus Rothe <corsair@gentoo.org>
  arphicfonts-0.1.20060513.ebuild:
  Stable on ppc64; bug #171063

  17 Mar 2007; nixnut <nixnut@gentoo.org> arphicfonts-0.1.20060513.ebuild:
  Stable on ppc wrt bug 171063

  17 Mar 2007; Steve Dibb <beandog@gentoo.org>
  arphicfonts-0.1.20060513.ebuild:
  amd64 stable, bug 171063

  15 Mar 2007; Jeroen Roovers <jer@gentoo.org>
  arphicfonts-0.1.20060513.ebuild:
  Stable for HPPA (bug #171063).

  12 Mar 2007; Raúl Porcel <armin76@gentoo.org>
  arphicfonts-0.1.20060513.ebuild:
  x86 stable

  22 Jan 2007; Diego Pettenò <flameeyes@gentoo.org>