@@ -1,6 +1,9 @@
 # ChangeLog for media-fonts/arphicfonts
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/arphicfonts/ChangeLog,v 1.45 2007/10/02 01:29:30 dirtyepic Exp $
+# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/arphicfonts/ChangeLog,v 1.46 2008/05/30 17:37:11 loki_val Exp $
+
+  30 May 2008; Peter Alfredsen <loki_val@gentoo.org> ChangeLog:
+  Version bump. Closes bug 220303.
 
   02 Oct 2007; Ryan Hill <dirtyepic@gentoo.org> arphicfonts-0.1-r2.ebuild,
   -arphicfonts-0.1.20060513.ebuild, arphicfonts-0.1.20060928.ebuild:
